apps/load-generator.yaml
apiVersion: v1
kind: Pod
metadata:
  name: load-generator
  namespace: default
spec:
  containers:
  - name: load-generator
    image: busybox:1.28
    command: ["/bin/sh", "-c", "while sleep 0.01; do wget -q -O- http://34.159.86.5/webapp; done"]
    resources:
      requests:
        cpu: "100m"
        memory: "128Mi"
      limits:
        cpu: "200m"
        memory: "256Mi"
  restartPolicy: Never
